# middle_wares

./: .dockerignore  .env  .gitignore  CLEANUP_REPORT.md  CODE_DUPLICATION_ANALYSIS.md  CODE_QUALITY.md  Dockerfile  EXAMPLES.md  FILES_CATALOG.md  FIXES_REPORT.md  FIX_MANUAL_INSTRUCTIONS.md  LINT_GUIDELINES.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_LINTING.md  UNUSED_METHODS_ANALYSIS.md  alembic.ini  architectural_analysis_report.md  check_db_connection.py  compose.yml  database_er_diagram.md  deploy.bat  deploy.ps1  deploy_en.ps1  deploy_fixed.ps1  main.py  mermaid.md  pyproject.toml  requirements.txt  tennis_score.db
alembic/: env.py
alembic/versions/: 77a6e1e95766_init_schema.py  843559b80c4c_initial_postgres_setup_override.py
nginx/: nginx.conf
src/tennis_score/: __init__.py  __main__.py  app.py  controllers.py  controllers_new.py  router.py  utils.py
src/tennis_score/controllers/: __init__.py  list_controllers.py  match_controllers.py  view_controllers.py
src/tennis_score/core/: __init__.py  app_orchestrator.py  presentation.py  response.py  router.py  template.py
src/tennis_score/core/middleware/: __init__.py  logging.py  static.py
src/tennis_score/dto/: __init__.py  match_dto.py  player_dto.py
src/tennis_score/infrastructure/: __init__.py  app_orchestrator.py  router.py  routing.py  template.py
src/tennis_score/infrastructure/middleware/: cors.py
src/tennis_score/middlewares/: __init__.py  cors.py  logging.py  static.py
src/tennis_score/model/: __init__.py  match.py  orm_models.py  player.py
src/tennis_score/repositories/: __init__.py  match_repository.py  orm_repository.py
src/tennis_score/server/: app.py
src/tennis_score/services/: __init__.py  app_orchestrator.py  match_data_handler.py  match_service.py  match_service.py.bak  routes_handler.py  score_handler.py  template_renderer.py  view_data_handler.py
src/tennis_score/templates/: error.html  footer.html  index.html  match-score.html  matches.html  nav.html  new-match.html
src/tennis_score/templates/static/css/: style.css
src/tennis_score/templates/static/js/: app.js
